# codex-windows-cn

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  app.manifest  tauri.conf.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-v1-is-a-chinese-install-update-assistant.md  0002-use-tauri-react-typescript-for-ui.md  0003-detect-installed-product-by-package-contents.md
docs/release/: v1-smoke.md
docs/superpowers/specs/: 2026-07-10-local-version-manager-design.md  2026-07-12-launcher-self-update-cleanup-visibility-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  ErrorBoundary.tsx  appModel.ts  appTypes.ts  bridge.ts  main.tsx  styles.css  styles.test.mjs  useAppController.ts
frontend/src/components/: AssistantMark.tsx  Progress.tsx  Shell.tsx
frontend/src/features/installer/: InstallerWizard.tsx
frontend/src/features/workspace/: InstalledWorkspace.tsx
scripts/: package-release.ps1
src/: bridge.rs  cleanup.rs  codex_exe.rs  config.rs  dark_window.rs  dialogs.rs  elevate.rs  extract.rs  installer.rs  junction.rs  launcher_update.rs  lib.rs  main.rs  mode.rs  path_dialog.rs  proxy.rs  registry.rs  safety.rs  shortcut.rs  splash.rs  uninstall.rs  updater.rs  versions.rs
src/store/: direct.rs  local_file.rs  mod.rs  winget.rs
tests/: install_bridge.rs  launcher_update_bridge.rs  proxy_bridge.rs  readme_contract.rs  release_workflow_contract.rs  tauri_bridge.rs  uninstall_bridge.rs  update_bridge.rs  version_manager.rs
